added a header container

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>spotlight project</title>
     <link rel="stylesheet" href="/project-2/style.css">
 </head>
-<body class="bg-green-500 h-screen">
+<header>
+
+</header>
+<body>
 </body>
 </html>
