added the link items

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     <link rel="stylesheet" href="/project-2/style.css">
 </head>
 <header>
-
+    <div>
+        <a href="">About</a>
+        <a href="">Articles</a>
+        <a href="">Projects</a>
+        <a href="">Speaking</a>
+        <a href="">Uses</a>
+    </div>
 </header>
-<body>
+<body class="max-w-[1500px] mx-auto">
+    <div></div>
 </body>
 </html>
