added some style to the link items and the nav container

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-black">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="/project-2/style.css">
 </head>
 <header>
-    <div>
-        <a href="">About</a>
-        <a href="">Articles</a>
-        <a href="">Projects</a>
-        <a href="">Speaking</a>
-        <a href="">Uses</a>
-    </div>
+    <nav class="flex justify-center text-white">
+        <div class="bg-zinc-800 px-3 py-2 rounded-full">
+            <a href="" class="px-3 py-2">About</a>
+            <a href="" class="px-3 py-2">Articles</a>
+            <a href="" class="px-3 py-2">Projects</a>
+            <a href="" class="px-3 py-2">Speaking</a>
+            <a href="" class="px-3 py-2">Uses</a>
+        </div>
+    </nav>
 </header>
 <body class="max-w-[1500px] mx-auto">
     <div></div>
