--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-black">
+<html lang="en" class="bg-black h-screen">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>spotlight project</title>
     <link rel="stylesheet" href="/project-2/style.css">
 </head>
-<header>
+<header class="py-6">
     <nav class="flex justify-center text-white">
-        <div class="bg-zinc-800 px-3 py-2 rounded-full">
-            <a href="" class="px-3 py-2">About</a>
-            <a href="" class="px-3 py-2">Articles</a>
-            <a href="" class="px-3 py-2">Projects</a>
-            <a href="" class="px-3 py-2">Speaking</a>
-            <a href="" class="px-3 py-2">Uses</a>
+        <div class="flex justify-center bg-zinc-800 px-3 text-sm font-semibold rounded-full">
+            <a href="" class="px-3 py-3">About</a>
+            <a href="" class="px-3 py-3">Articles</a>
+            <a href="" class="px-3 py-3">Projects</a>
+            <a href="" class="px-3 py-3">Speaking</a>
+            <a href="" class="px-3 py-3">Uses</a>
         </div>
     </nav>
 </header>
