added a main container to the body

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-black h-screen">
+<html lang="en" class=" h-screen">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,10 @@
         </div>
     </nav>
 </header>
-<body class="max-w-[1500px] mx-auto">
-    <div></div>
+<body class="max-w-[1300px] mx-auto">
+    <main>
+        <div>
+        </div>
+    </main>
 </body>
 </html>
