added a h1 title to the main container

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <main>
         <div>
         </div>
+        <h1 class="text-[32px] font-bold tracking-tight">Software designer, founder, and amateur astronaut</h1>
     </main>
 </body>
 </html>
