added div conatiner for the companies logos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>spotlight project</title>
     <link rel="stylesheet" href="/project-2/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <header class="py-6">
     <nav class="flex justify-center text-white">
@@ -28,6 +31,12 @@
                 I’m Spencer, a software designer and entrepreneur based in New York City. I’m the founder and CEO of Planetaria, 
                where we develop technologies that empower regular people to explore space on their own terms.
             </p>
+            <div class="text-zinc-400 mt-6 text-lg">
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-linkedin"></i>
+            </div>
         </section>
     </main>
 </body>
