added some style to the logo icons

--- a/index.html
+++ b/index.html
@@ -31,11 +31,19 @@
                 I’m Spencer, a software designer and entrepreneur based in New York City. I’m the founder and CEO of Planetaria, 
                where we develop technologies that empower regular people to explore space on their own terms.
             </p>
-            <div class="text-zinc-400 mt-6 text-lg">
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-brands fa-linkedin"></i>
+            <div class="text-zinc-400 mt-6 ml-1 text-xl flex gap-7">
+                <a href="" class="px-1 -m-1">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a href="" class="px-1 -m-1">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="" class="px-1 -m-1">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="" class="px-1 -m-1">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
             </div>
         </section>
     </main>
