added link to link items in the header

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <header class="py-[22px]">
     <nav class="flex justify-center text-white">
         <div class="flex justify-center bg-zinc-800 px-3 text-sm font-medium rounded-full shadow-lg shadow-zinc-800/5 border-x border-zinc-700">
-            <a href="" class="px-3 py-3 hover:text-teal-400 transition">About</a>
-            <a href="" class="px-3 py-3 hover:text-teal-400 transition">Articles</a>
-            <a href="" class="px-3 py-3 hover:text-teal-400 transition">Projects</a>
-            <a href="" class="px-3 py-3 hover:text-teal-400 transition">Speaking</a>
-            <a href="" class="px-3 py-3 hover:text-teal-400 transition">Uses</a>
+            <a href="https://spotlight.tailwindui.com/about" class="px-3 py-3 hover:text-teal-400 transition">About</a>
+            <a href="https://spotlight.tailwindui.com/articles" class="px-3 py-3 hover:text-teal-400 transition">Articles</a>
+            <a href="https://spotlight.tailwindui.com/projects" class="px-3 py-3 hover:text-teal-400 transition">Projects</a>
+            <a href="https://spotlight.tailwindui.com/speaking" class="px-3 py-3 hover:text-teal-400 transition">Speaking</a>
+            <a href="https://spotlight.tailwindui.com/uses" class="px-3 py-3 hover:text-teal-400 transition">Uses</a>
         </div>
     </nav>
 </header>
@@ -34,16 +34,16 @@
                 where we develop technologies that empower regular people to explore space on their own terms.
             </p>
             <div class="text-zinc-400 mt-6 ml-1 text-xl flex gap-7">
-                <a href="" class="px-1 -m-1 hover:text-white">
+                <a href="https://twitter.com/?lang=en" class="px-1 -m-1 hover:text-white">
                     <i class="fa-brands fa-twitter"></i>
                 </a>
-                <a href="" class="px-1 -m-1 hover:text-white">
+                <a href="https://www.instagram.com/" class="px-1 -m-1 hover:text-white">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="" class="px-1 -m-1 hover:text-white">
+                <a href="https://github.com/" class="px-1 -m-1 hover:text-white">
                     <i class="fa-brands fa-github"></i>
                 </a>
-                <a href="" class="px-1 -m-1 hover:text-white">
+                <a href="https://www.linkedin.com/" class="px-1 -m-1 hover:text-white">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
             </div>
