added a section for images

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 </a>
             </div>
         </section>
+        <section>
+
+        </section>
     </main>
 </body>
 </html>
