added a nav bar with the menu button in the header container for the mobile screens

--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
             <a href="https://spotlight.tailwindui.com/uses" class="px-3 py-3 hover:text-teal-400 transition">Uses</a>
         </div>
     </nav>
-    <div></div>
-    <nav>
-        <div></div>
+    <nav class="md:hidden">
+        <div class="flex justify-end pr-4 gap-x-4">
+            <button type="button" class="bg-zinc-800 py-2 px-4 rounded-full text-white text-sm font-semibold">
+                Menu <i class="fa-solid fa-check text-[8px] text-zinc-500 ml-2"></i>
+            </button>
+            <button class="bg-zinc-800 py-2 px-4 rounded-full text-lg text-zinc-500">
+                <i class="fa-regular fa-moon"></i>
+            </button>
+        </div>
     </nav>
 </header>
 <body class="max-w-[1216px] bg-zinc-900 md:mx-8 lg:mx-16 xl:mx-auto">
