added style to the input in the form container

--- a/index.html
+++ b/index.html
@@ -122,7 +122,15 @@
             </div>
             <div class="px-4">
                 <form method="post" target="_blank" autocapitalize="on" class="border border-zinc-700/40 p-6 rounded-2xl">
-
+                    <h2 class="text-white text-sm font-semibold">
+                        <i class="fa-regular fa-envelope text-zinc-500 mr-2 text-sm"></i>
+                        Stay up to date
+                    </h2>
+                    <p class="text-zinc-400 text-sm mt-2">Get notified when i publish something new, and unsubscribe at any time.</p>
+                    <div class="mt-6 flex justify-between">
+                        <input class="min-w-[80%] px-3 py-[7px] rounded-md bg-zinc-700/10 border border-zinc-600 focus:ring-4 focus:ring-teal-400/10 focus:border-teal-400 focus:outline-none placeholder:text-zinc-500" type="email" placeholder="Email address" required pattern="[A-Za-z0-9]+@[a-z]+\.[a-z]{2,3}" title="must be a valid email address">
+                        <button class="px-3 py-2 text-white bg-zinc-700 rounded-md font-semibold hover:bg-zinc-600" type="submit">Join</button>
+                    </div>
                 </form>
             </div>
         </section>
