adde a div in the second section container

--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
                         <button class="px-3 py-2 text-white bg-zinc-700 rounded-md font-semibold hover:bg-zinc-600" type="submit">Join</button>
                     </div>
                 </form>
+                <div class="mt-10 border border-zinc-700/40 p-6 rounded-2xl">
+
+                </div>
             </div>
         </section>
     </main>
