added a title to the div with a bag icon

--- a/index.html
+++ b/index.html
@@ -133,7 +133,10 @@
                     </div>
                 </form>
                 <div class="mt-10 border border-zinc-700/40 p-6 rounded-2xl">
-
+                    <h2 class="text-white text-sm font-semibold">
+                        <i class="fa-solid fa-briefcase text-zinc-700 text-base"></i>
+                        Work
+                    </h2>
                 </div>
             </div>
         </section>
