added an ordered list

--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                         <i class="fa-solid fa-briefcase text-zinc-700 text-base"></i>
                         Work
                     </h2>
+                    <ol class="mt-6">
+
+                    </ol>
                 </div>
             </div>
         </section>
