added some style to the lists

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="px-4">
                 <form method="post" target="_blank" autocapitalize="on" class="border border-zinc-700/40 p-6 rounded-2xl">
                     <h2 class="text-white text-sm font-semibold">
-                        <i class="fa-regular fa-envelope text-zinc-500 mr-2 text-sm"></i>
+                        <i class="fa-regular fa-envelope text-zinc-500 mr-2 text-xl"></i>
                         Stay up to date
                     </h2>
                     <p class="text-zinc-400 text-sm mt-2">Get notified when i publish something new, and unsubscribe at any time.</p>
@@ -144,9 +144,9 @@
                             </div>
                             <div class="flex flex-col min-w-[83%] gap-y-1">
                                 <p class="text-white text-sm font-semibold">Planetaria</p>
-                                <div class="text-[13px] text-zinc-500 flex justify-between">
-                                    <p>CEO</p>
-                                    <time>2019 — present</time>
+                                <div class="text-[13px] flex justify-between">
+                                    <p class="text-zinc-400">CEO</p>
+                                    <time class="text-zinc-500">2019 — present</time>
                                 </div>
                             </div>
                         </li>
@@ -156,9 +156,9 @@
                             </div>
                             <div class="flex flex-col min-w-[83%] gap-y-1">
                                 <p class="text-white text-sm font-semibold">Airbnb</p>
-                                <div class="text-[13px] text-zinc-500 flex justify-between">
-                                    <p>Produc Designer</p>
-                                    <time>2014 — 2019</time>
+                                <div class="text-[13px] flex justify-between">
+                                    <p class="text-zinc-400">Produc Designer</p>
+                                    <time class="text-zinc-500">2014 — 2019</time>
                                 </div>
                             </div>
                         </li>
@@ -168,9 +168,9 @@
                             </div>
                             <div class="flex flex-col min-w-[83%] gap-y-1">
                                 <p class="text-white text-sm font-semibold">Facebook</p>
-                                <div class="text-[13px] text-zinc-500 flex justify-between">
-                                    <p>IOS Software Engineer</p>
-                                    <time>2011 — 2014</time>
+                                <div class="text-[13px] flex justify-between">
+                                    <p class="text-zinc-400">IOS Software Engineer</p>
+                                    <time class="text-zinc-500">2011 — 2014</time>
                                 </div>
                             </div>
                         </li>
@@ -180,9 +180,9 @@
                             </div>
                             <div class="flex flex-col min-w-[83%] gap-y-1">
                                 <p class="text-white text-sm font-semibold">Starbucks</p>
-                                <div class="text-[13px] text-zinc-500 flex justify-between">
-                                    <p>Shift Supervisor</p>
-                                    <time>2008 — 2011</time>
+                                <div class="text-[13px] flex justify-between">
+                                    <p class="text-zinc-400">Shift Supervisor</p>
+                                    <time class="text-zinc-500">2008 — 2011</time>
                                 </div>
                             </div>
                         </li>
