added a link item in the bottom of the ordered list

--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@
                             </div>
                         </li>
                     </ol>
+                    <a href="" class="flex gap-x-2 justify-center text-white text-sm font-semibold mt-6">
+                        Download CV
+                        <i class="fa-solid fa-arrow-down text-[10px] mt-1.5"></i>
+                    </a>
                 </div>
             </div>
         </section>
