--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
                             </div>
                         </li>
                     </ol>
-                    <a href="" class="flex gap-x-2 justify-center text-white text-sm font-semibold mt-6">
+                    <a href="" class="flex gap-x-2 justify-center text-white text-sm font-semibold mt-6 bg-zinc-800/50 py-2.5 px-3 rounded-md hover:bg-zinc-800">
                         Download CV
-                        <i class="fa-solid fa-arrow-down text-[10px] mt-1.5"></i>
+                        <i class="fa-solid fa-arrow-down text-[10px] mt-1.5 text-zinc-400"></i>
                     </a>
                 </div>
             </div>
