--- a/index.html
+++ b/index.html
@@ -196,7 +196,9 @@
         </section>
     </main>
 </body>
-<hr class="border border-zinc-700/40">
-<footer>
+<hr class="border border-zinc-700/40 mt-20">
+<footer class="px-4 pt-10 pb-16">
+    <div>
+    </div>
 </footer>
 </html>
