added the link items in the div

--- a/index.html
+++ b/index.html
@@ -198,7 +198,11 @@
 </body>
 <hr class="border border-zinc-700/40 mt-20">
 <footer class="px-4 pt-10 pb-16">
-    <div>
+    <div class="text-white flex justify-center gap-x-6 font-semibold text-sm">
+        <a href="">About</a>
+        <a href="">Projects</a>
+        <a href="">Speaking</a>
+        <a href="">Uses</a>
     </div>
 </footer>
 </html>
