added a paragraph in the footer

--- a/index.html
+++ b/index.html
@@ -197,12 +197,15 @@
     </main>
 </body>
 <hr class="border border-zinc-700/40 mt-20">
-<footer class="px-4 pt-10 pb-16">
-    <div class="text-white flex justify-center gap-x-6 font-semibold text-sm">
-        <a href="">About</a>
-        <a href="">Projects</a>
-        <a href="">Speaking</a>
-        <a href="">Uses</a>
+<footer class="pt-10 pb-16">
+    <div class="px-4 flex flex-col items-center gap-6">
+        <div class="text-white gap-x-6 font-semibold text-sm">
+            <a href="">About</a>
+            <a href="">Projects</a>
+            <a href="">Speaking</a>
+            <a href="">Uses</a>
+        </div>
+        <p class="text-zinc-500 text-sm">© 2023 Spencer Sharp. All rights reserved.</p>
     </div>
 </footer>
 </html>
