fix some issues

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             </div>
                         </li>
                     </ol>
-                    <a href="" class="flex gap-x-2 justify-center text-white text-sm font-semibold mt-6 bg-zinc-800/50 py-2.5 px-3 rounded-md hover:bg-zinc-800">
+                    <a href="" class="flex gap-x-3 justify-center text-white text-sm font-semibold mt-6 bg-zinc-800/50 py-2.5 px-3 rounded-md hover:bg-zinc-800">
                         Download CV
                         <i class="fa-solid fa-arrow-down text-[10px] mt-1.5 text-zinc-400"></i>
                     </a>
@@ -196,14 +196,14 @@
         </section>
     </main>
 </body>
-<hr class="border border-zinc-700/40 mt-20">
+<hr class="border border-zinc-700/40 mt-32">
 <footer class="pt-10 pb-16">
-    <div class="px-4 flex flex-col items-center gap-6">
-        <div class="text-white gap-x-6 font-semibold text-sm">
-            <a href="">About</a>
-            <a href="">Projects</a>
-            <a href="">Speaking</a>
-            <a href="">Uses</a>
+    <div class="px-4 flex flex-col items-center gap-7">
+        <div class="text-white space-x-5 font-semibold text-sm">
+            <a href="" class="hover:text-teal-400 transition">About</a>
+            <a href="" class="hover:text-teal-400 transition">Projects</a>
+            <a href="" class="hover:text-teal-400 transition">Speaking</a>
+            <a href="" class="hover:text-teal-400 transition">Uses</a>
         </div>
         <p class="text-zinc-500 text-sm">© 2023 Spencer Sharp. All rights reserved.</p>
     </div>
