--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <a href="https://spotlight.tailwindui.com/speaking" class="px-3 py-3 hover:text-teal-400 transition">Speaking</a>
             <a href="https://spotlight.tailwindui.com/uses" class="px-3 py-3 hover:text-teal-400 transition">Uses</a>
         </div>
+        <button class="absolute right-16 bg-zinc-800 py-2 px-4 rounded-full text-lg text-zinc-500">
+            <i class="fa-regular fa-moon"></i>
+        </button>
     </nav>
     <nav class="md:hidden">
         <div class="flex justify-end pr-4 gap-x-4">
