--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <section class="mt-20 grid gap-20 md:px-12 lg:grid-cols-2 lg:px-12 lg:gap-0 xl:px-24">
             <div class="flex flex-col gap-y-16">
                 <a href="">
-                    <div class="relative">
+                    <div class="relative p-4">
                         <div class="absolute h-full w-full top-0 left-0 hover:bg-zinc-200/10 hover:scale-110 transition duration-300 rounded-3xl"></div>
                         <p class="text-sm text-zinc-500">
                             <span class="mr-2">|</span>
@@ -90,7 +90,7 @@
                     </div>
                 </a>
                 <a href="">
-                    <div class="relative">
+                    <div class="relative p-4">
                         <div class="absolute h-full w-full top-0 left-0 hover:bg-zinc-200/10 hover:scale-110 transition duration-300 rounded-3xl"></div>
                         <p class="text-sm text-zinc-500">
                             <span class="mr-2">|</span>
@@ -108,7 +108,7 @@
                     </div>
                 </a>
                 <a href="">
-                    <div class="relative">
+                    <div class="relative p-4">
                         <div class="absolute h-full w-full top-0 left-0 hover:bg-zinc-200/10 hover:scale-110 transition duration-300 rounded-3xl"></div>
                         <p class="text-sm text-zinc-500">
                             <span class="mr-2">|</span>
