added changes to the media query of the big screens

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="https://spotlight.tailwindui.com/speaking" class="px-3 py-3 hover:text-teal-400 transition">Speaking</a>
             <a href="https://spotlight.tailwindui.com/uses" class="px-3 py-3 hover:text-teal-400 transition">Uses</a>
         </div>
-        <button class="absolute right-16 bg-zinc-800 py-2 px-4 rounded-full text-lg text-zinc-500 lg:right-28 xl:right-52">
+        <button class="absolute right-16 bg-zinc-800 py-2 px-4 rounded-full text-lg text-zinc-500 lg:right-28 xl:right-52 2xl:right-[770px]">
             <i class="fa-regular fa-moon"></i>
         </button>
     </nav>
