--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </section>
         <section class="mt-20 grid gap-20 md:px-12 lg:grid-cols-2 lg:px-12 lg:gap-0 xl:px-24">
             <div class="flex flex-col gap-y-12">
-                <a href="">
+                <a href="https://spotlight.tailwindui.com/articles/crafting-a-design-system-for-a-multiplanetary-future">
                     <div class="relative p-4 md:px-0">
                         <div class="absolute h-full w-full top-0 left-0 hover:bg-zinc-200/10 hover:scale-110 transition duration-300 rounded-3xl"></div>
                         <p class="text-sm text-zinc-500">
@@ -90,7 +90,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="">
+                <a href="https://spotlight.tailwindui.com/articles/introducing-animaginary">
                     <div class="relative p-4 md:px-0">
                         <div class="absolute h-full w-full top-0 left-0 hover:bg-zinc-200/10 hover:scale-110 transition duration-300 rounded-3xl"></div>
                         <p class="text-sm text-zinc-500">
@@ -108,7 +108,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="">
+                <a href="https://spotlight.tailwindui.com/articles/rewriting-the-cosmos-kernel-in-rust">
                     <div class="relative p-4 md:px-0">
                         <div class="absolute h-full w-full top-0 left-0 hover:bg-zinc-200/10 hover:scale-110 transition duration-300 rounded-3xl"></div>
                         <p class="text-sm text-zinc-500">
