--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <header class="py-[22px]">
-    <nav class="hidden md:flex md:justify-center text-white">
-        <div class="flex justify-center bg-zinc-800 px-3 text-sm font-medium rounded-full shadow-lg shadow-zinc-800/5 border-x border-zinc-700">
+    <nav class="hidden md:flex md:justify-center">
+        <div class="flex justify-center bg-zinc-800 px-3 text-sm text-white font-medium rounded-full shadow-lg shadow-zinc-800/5 border-x border-zinc-700">
             <a href="https://spotlight.tailwindui.com/about" class="px-3 py-3 hover:text-teal-400 transition">About</a>
             <a href="https://spotlight.tailwindui.com/articles" class="px-3 py-3 hover:text-teal-400 transition">Articles</a>
             <a href="https://spotlight.tailwindui.com/projects" class="px-3 py-3 hover:text-teal-400 transition">Projects</a>
@@ -207,10 +207,10 @@
 <footer class="pt-10 pb-16">
     <div class="px-4 flex flex-col items-center gap-7 md:flex-row md:justify-between md:px-8 lg:px-12 xl:px-24">
         <div class="text-white space-x-5 font-semibold text-sm">
-            <a href="" class="hover:text-teal-400 transition">About</a>
-            <a href="" class="hover:text-teal-400 transition">Projects</a>
-            <a href="" class="hover:text-teal-400 transition">Speaking</a>
-            <a href="" class="hover:text-teal-400 transition">Uses</a>
+            <a href="https://spotlight.tailwindui.com/about" class="hover:text-teal-400 transition">About</a>
+            <a href="https://spotlight.tailwindui.com/projects" class="hover:text-teal-400 transition">Projects</a>
+            <a href="https://spotlight.tailwindui.com/speaking" class="hover:text-teal-400 transition">Speaking</a>
+            <a href="https://spotlight.tailwindui.com/uses" class="hover:text-teal-400 transition">Uses</a>
         </div>
         <p class="text-zinc-500 text-sm">© 2023 Spencer Sharp. All rights reserved.</p>
     </div>
