--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPENCER SHARP</title>
-    <link rel="stylesheet" href="/project-2/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -18,7 +18,7 @@
             <a href="https://spotlight.tailwindui.com/speaking" class="px-3 py-3 hover:text-teal-400 transition">Speaking</a>
             <a href="https://spotlight.tailwindui.com/uses" class="px-3 py-3 hover:text-teal-400 transition">Uses</a>
         </div>
-        <button class="absolute right-16 bg-zinc-800 py-2 px-4 rounded-full text-lg text-zinc-500 lg:right-28 xl:right-52 2xl:right-[770px]">
+        <button class="absolute right-16 bg-zinc-800 py-2 px-4 rounded-full text-lg text-zinc-500 lg:right-28 xl:right-52">
             <i class="fa-regular fa-moon"></i>
         </button>
     </nav>
