--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPENCER SHARP</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -135,7 +135,7 @@
                     </h2>
                     <p class="text-zinc-400 text-sm mt-2 leading-6">Get notified when i publish something new, and unsubscribe at any time.</p>
                     <div class="mt-6 flex justify-between">
-                        <input class="min-w-[80%] md:min-w-[87%] lg:min-w-fit px-3 py-[7px] rounded-md bg-zinc-700/10 border border-zinc-600 focus:ring-4 focus:ring-teal-400/10 focus:border-teal-400 focus:outline-none placeholder:text-zinc-500" type="email" placeholder="Email address" required pattern="[A-Za-z0-9]+@[a-z]+\.[a-z]{2,3}" title="must be a valid email address">
+                        <input class="text-white min-w-[80%] md:min-w-[87%] lg:min-w-fit px-3 py-[7px] rounded-md bg-zinc-700/10 border border-zinc-600 focus:ring-4 focus:ring-teal-400/10 focus:border-teal-400 focus:outline-none placeholder:text-zinc-500" type="email" placeholder="Email address" required pattern="[A-Za-z0-9]+@[a-z]+\.[a-z]{2,3}" title="must be a valid email address">
                         <button class="px-3 py-2 text-white bg-zinc-700 rounded-md font-semibold hover:bg-zinc-600" type="submit">Join</button>
                     </div>
                 </form>
